# termux-sudo

./: Makefile.am  Makefile.in.in  README.md  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
man/: termux-sudo.1
src/: Makefile.in  sudo.cpp
