AC_INIT([termux-sudo], [1.0], [pacspedd@outlook.com])

# Mindestversion von Autoconf festlegen
AC_PREREQ([2.69])                                 
# Konfiguration des Compiler
AC_PROG_CXX
# Checks für Bibliotheken und Header-Dateien
# Beispiel: AC_CHECK_LIB, AC_CHECK_HEADERS        
# Ausgabe der Konfigurationsdateien
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
  Makefile
  Makefile.in
  src/Makefile
])

# Ausgabe der Konfigurationsdatei
AC_OUTPUT
